refactor(DbProductDao): ParameterSource 간결화
Co-authored-by: drunkenhw <drunkenhw@gmail.com>